youfull/objects/ZM_MarketZoneKPIConfig__c.object
<CustomObject>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <picklist>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Summary 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Summary 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Summary 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Output</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Goal_To_Maximize_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal To Maximize Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketDefaultPlan__c</fullName>
        <label>MarketDefaultPlan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarketUsesDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean, always true if no PlanField. If true, plan required</description>
        <label>MarketUsesDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>MarketZoneKPIConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZM_ZoneKPIConfigName__c</fullName>
        <label>Zone KPI Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>APPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET_SLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTV_REP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMOVL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNSTMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA1_NET_SLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_TAG_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_TAG_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_TAG_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT_TAG_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_0_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITLD_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_1_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_2_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_3_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_4_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_5_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_6_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_7_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_8_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_9_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_10_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_11_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_12_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_13_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_14_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITL_15_STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOP_SLR_LVL_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOP_SLR_LVL_2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Market Zone KPI Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Zone KPI Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>